Fix UI_Button_Link texts automatically wrapping.
Set button_text class divs to inherit width from buttons instead.

--- a/src/main/components/buttons.css
+++ b/src/main/components/buttons.css
@@ -22,6 +22,7 @@
   transform: translate(-50%, -50%);
   text-align: center;
   font-weight: bold;
+  width: inherit;
 }
 
 .home_button_links {
